--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,13 +16,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
     
+      - name: Strip 'v' from version
+        run: |
+          VERSION=${{ inputs.version }}
+          VERSION=${VERSION#"v"}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+    
       - name: Download latest xpi
         run: |
-          curl -o dist/firefox/${{ inputs.version }}.xpi https://github.com/NIAEFEUP/nitsig/releases/download/v${{ inputs.version }}/firefox.xpi
+          curl -o dist/firefox/${VERSION}.xpi https://github.com/NIAEFEUP/nitsig/releases/download/${{ inputs.version }}/firefox.xpi
 
       - name: Update manifest
         run: |
-          jq '."addons"."nitsig@ni.fe.up.pt"."updates" += [{ "version": "${{ inputs.version }}", "update_link": "https://ni.fe.up.pt/nitsig/firefox/${{ inputs.version }}.xpi" }]' dist/firefox/updates.json
+          jq '."addons"."nitsig@ni.fe.up.pt"."updates" += [{ "version": "${VERSION}", "update_link": "https://ni.fe.up.pt/nitsig/firefox/${VERSION}.xpi" }]' dist/firefox/updates.json
 
       - name: Commit and push
         uses: actions-js/push@v1
