--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,37 +1,37 @@
 name: CD
 
 on:
-  workflow_dispatch:
-    inputs:
-        version:
-            description: 'Version to update'
-            required: true
-            type: string
+    workflow_dispatch:
+        inputs:
+            version:
+                description: "Version to update"
+                required: true
+                type: string
 
 jobs:
-  update-firefox:
-    name: Update firefox
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-    
-      - name: Strip 'v' from version
-        run: |
-          VERSION=${{ inputs.version }}
-          VERSION=${VERSION#"v"}
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-    
-      - name: Download latest xpi
-        run: |
-          curl -Lo dist/firefox/${VERSION}.xpi https://github.com/NIAEFEUP/nitsig/releases/download/${{ inputs.version }}/firefox.xpi
+    update-firefox:
+        name: Update firefox
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
 
-      - name: Update manifest
-        run: |
-          jq --indent 4 '."addons"."nitsig@ni.fe.up.pt"."updates" += [{ "version": "'${VERSION}'", "update_link": "https://ni.fe.up.pt/nitsig/firefox/'${VERSION}'.xpi" }]' dist/firefox/updates.json | sponge dist/firefox/updates.json
+            - name: Strip 'v' from version
+              run: |
+                  VERSION=${{ inputs.version }}
+                  VERSION=${VERSION#"v"}
+                  echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Commit and push
-        uses: actions-js/push@v1.4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          message: Update firefox to ${{ inputs.version }}
+            - name: Download latest xpi
+              run: |
+                  curl -Lo dist/firefox/${VERSION}.xpi https://github.com/NIAEFEUP/nitsig/releases/download/${{ inputs.version }}/firefox.xpi
+
+            - name: Update manifest
+              run: |
+                  cat <<< $(jq --indent 4 '."addons"."nitsig@ni.fe.up.pt"."updates" += [{ "version": "'${VERSION}'", "update_link": "https://ni.fe.up.pt/nitsig/firefox/'${VERSION}'.xpi" }]' dist/firefox/updates.json) > dist/firefox/updates.json
+
+            - name: Commit and push
+              uses: actions-js/push@v1.4
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  message: Update firefox to ${{ inputs.version }}
